// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SiteFooter renders correctly with no social links 1`] = `
.c1 {
  display: grid;
  min-height: auto;
  position: relative;
  width: 100%;
  column-gap: 16px;
  grid-template-columns: 1fr min(1440px, 100% - 32px) 1fr;
}

.c1 >* {
  grid-column: 2/auto;
}

.c4 {
  display: flex;
  gap: 1.5rem;
  justify-content: center;
  flex-wrap: wrap;
}

.c18 {
  color: var(--color-paragraph);
  font-size: 0.875rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c12 {
  display: inline-flex;
  align-items: stretch;
  font-family: -apple-system,BlinkMacSystemFont,sans-serif;
  font-size: 15px;
  line-height: 1.15;
}

.c13 {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  padding: 0.3em 0.5em;
  border: 0.13em solid #00ffbc;
}

.c14 {
  background: #fff;
  color: #0e11a8;
  border-right: 0;
  border-radius: 0.3em 0 0 0.3em;
  min-width: 8.2em;
}

.c15 {
  background: #00ffbc;
  color: #0e11a8;
  font-weight: 700;
  text-decoration: none;
  border-left: 0;
  border-radius: 0 0.3em 0.3em 0;
}

.c7 {
  min-height: 3.5rem;
}

.c10 {
  align-items: center;
  display: flex;
}

.c0 {
  background: var(--color-badge-bg);
  border-top: 1px solid rgba(128, 128, 128, 0.12);
  padding-bottom: 1.5rem;
  padding-top: 3rem;
}

.c2 {
  border-bottom: 1px solid rgba(128, 128, 128, 0.12);
  margin-bottom: 2rem;
  padding-bottom: 2rem;
  text-align: center;
}

.c3 {
  color: var(--color-headline);
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 2rem;
  font-weight: 700;
  line-height: 1;
  margin: 0 0 1.5rem;
}

.c5 {
  align-items: center;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  text-align: center;
}

.c6 {
  align-items: center;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  justify-content: center;
}

.c8 {
  opacity: 0.7;
  transition: opacity 0.2s ease;
}

.c8:hover,
.c8:focus-within {
  opacity: 1;
}

.c9 {
  display: flex;
  zoom: 0.9;
}

.c16 {
  align-items: center;
  display: flex;
  flex-direction: column;
  gap: 0.75rem;
}

.c11 {
  opacity: 0.7;
  transform: scale(0.9);
  transform-origin: center center;
}

.c17 {
  align-items: center;
  display: flex;
  flex-direction: column;
  flex-shrink: 0;
  gap: 0.5rem;
}

@media (min-width: 600px) {
  .c1 {
    column-gap: calc(24px);
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  }
}

@media (min-width: 900px) {
  .c1 {
    column-gap: calc(36px);
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
  }
}

@media (min-width: 1200px) {
  .c1 {
    column-gap: calc(81px);
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
  }
}

@media (min-width: 1536px) {
  .c1 {
    column-gap: calc(121.5px);
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (max-width: 899.99px) {
  .c0 {
    display: none;
  }
}

@media (max-width: 899.99px) {
  .c2 {
    margin-bottom: 1rem;
    padding-bottom: 1rem;
  }
}

@media (min-width: 900px) {
  .c2 {
    border-bottom: none;
    margin-bottom: 1.5rem;
    padding-bottom: 0;
  }
}

@media (max-width: 899.99px) {
  .c3 {
    font-size: 1.5rem;
    margin-bottom: 1rem;
  }
}

@media (min-width: 1200px) {
  .c3 {
    font-size: 2.5rem;
  }
}

@media (min-width: 900px) {
  .c5 {
    align-items: flex-end;
    display: grid;
    gap: 1.5rem;
    grid-template-columns: 1fr 1fr 1fr;
    text-align: left;
  }
}

@media (min-width: 900px) {
  .c6 {
    align-items: flex-start;
  }
}

@media (min-width: 900px) {
  .c16 {
    align-items: center;
    text-align: center;
  }
}

@media (min-width: 900px) {
  .c11 {
    transform-origin: left center;
  }
}

@media (min-width: 900px) {
  .c17 {
    align-items: flex-end;
  }
}

<div>
  <footer
    class="c0"
    role="contentinfo"
  >
    <section
      class="c1"
    >
      <div
        class="c2"
      >
        <h2
          class="c3"
        >
          Let's work together.
        </h2>
        <div
          class="c4"
        />
      </div>
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          <div
            class="c7 c8 c9"
            data-testid="tree-nation-offset-website"
          >
            <div
              class="c10"
            >
              <div
                data-lang="en"
                data-theme="light"
                data-tree-nation-code="a4d3639b36ee64ed"
                data-widget-type="offset-website"
              />
            </div>
          </div>
          <div
            class="c11"
          >
            <span
              class="c12"
            >
              <span
                class="c13 c14"
              >
                0.05
                g of CO₂/view
              </span>
              <a
                aria-label="Website Carbon result: 0.05 grams of CO₂ per page view, tested 2026-07-12"
                class="c13 c15"
                href="https://www.websitecarbon.com/website/agostiniandrea-dev/"
                rel="noopener noreferrer"
                target="_blank"
              >
                Website Carbon
              </a>
            </span>
          </div>
        </div>
        <div
          class="c16"
        />
        <div
          class="c17"
        >
          <p
            class="c18"
            style="color: var(--color-paragraph);"
          >
            © 
            2026
             
            Andrea Agostini
          </p>
        </div>
      </div>
    </section>
  </footer>
</div>
`;

exports[`SiteFooter renders correctly with social links 1`] = `
.c1 {
  display: grid;
  min-height: auto;
  position: relative;
  width: 100%;
  column-gap: 16px;
  grid-template-columns: 1fr min(1440px, 100% - 32px) 1fr;
}

.c1 >* {
  grid-column: 2/auto;
}

.c4 {
  display: flex;
  gap: 1.5rem;
  justify-content: center;
  flex-wrap: wrap;
}

.c5 {
  color: var(--color-highlight);
  font-size: 1rem;
  line-height: 1;
  text-decoration: none;
  transition: color 0.2s ease-in-out;
}

.c5:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: 2px;
}

.c19 {
  color: var(--color-paragraph);
  font-size: 0.875rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c14 {
  display: inline-flex;
  align-items: stretch;
  font-family: -apple-system,BlinkMacSystemFont,sans-serif;
  font-size: 15px;
  line-height: 1.15;
}

.c15 {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  padding: 0.3em 0.5em;
  border: 0.13em solid #00ffbc;
}

.c16 {
  background: #fff;
  color: #0e11a8;
  border-right: 0;
  border-radius: 0.3em 0 0 0.3em;
  min-width: 8.2em;
}

.c17 {
  background: #00ffbc;
  color: #0e11a8;
  font-weight: 700;
  text-decoration: none;
  border-left: 0;
  border-radius: 0 0.3em 0.3em 0;
}

.c9 {
  min-height: 3.5rem;
}

.c12 {
  align-items: center;
  display: flex;
}

.c0 {
  background: var(--color-badge-bg);
  border-top: 1px solid rgba(128, 128, 128, 0.12);
  padding-bottom: 1.5rem;
  padding-top: 3rem;
}

.c2 {
  border-bottom: 1px solid rgba(128, 128, 128, 0.12);
  margin-bottom: 2rem;
  padding-bottom: 2rem;
  text-align: center;
}

.c3 {
  color: var(--color-headline);
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 2rem;
  font-weight: 700;
  line-height: 1;
  margin: 0 0 1.5rem;
}

.c6 {
  color: var(--color-highlight);
  font-weight: 700;
}

.c7 {
  align-items: center;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  text-align: center;
}

.c8 {
  align-items: center;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  justify-content: center;
}

.c10 {
  opacity: 0.7;
  transition: opacity 0.2s ease;
}

.c10:hover,
.c10:focus-within {
  opacity: 1;
}

.c11 {
  display: flex;
  zoom: 0.9;
}

.c18 {
  align-items: center;
  display: flex;
  flex-direction: column;
  gap: 0.75rem;
}

.c20 {
  color: var(--color-paragraph);
  max-width: 36ch;
}

.c21 {
  display: block;
  text-wrap: balance;
}

.c13 {
  opacity: 0.7;
  transform: scale(0.9);
  transform-origin: center center;
}

.c22 {
  align-items: center;
  display: flex;
  flex-direction: column;
  flex-shrink: 0;
  gap: 0.5rem;
}

@media (min-width: 600px) {
  .c1 {
    column-gap: calc(24px);
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  }
}

@media (min-width: 900px) {
  .c1 {
    column-gap: calc(36px);
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
  }
}

@media (min-width: 1200px) {
  .c1 {
    column-gap: calc(81px);
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
  }
}

@media (min-width: 1536px) {
  .c1 {
    column-gap: calc(121.5px);
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (hover: hover) {
  .c5:hover {
    color: var(--color-tertiary);
  }
}

@media (max-width: 899.99px) {
  .c0 {
    display: none;
  }
}

@media (max-width: 899.99px) {
  .c2 {
    margin-bottom: 1rem;
    padding-bottom: 1rem;
  }
}

@media (min-width: 900px) {
  .c2 {
    border-bottom: none;
    margin-bottom: 1.5rem;
    padding-bottom: 0;
  }
}

@media (max-width: 899.99px) {
  .c3 {
    font-size: 1.5rem;
    margin-bottom: 1rem;
  }
}

@media (min-width: 1200px) {
  .c3 {
    font-size: 2.5rem;
  }
}

@media (min-width: 900px) {
  .c7 {
    align-items: flex-end;
    display: grid;
    gap: 1.5rem;
    grid-template-columns: 1fr 1fr 1fr;
    text-align: left;
  }
}

@media (min-width: 900px) {
  .c8 {
    align-items: flex-start;
  }
}

@media (min-width: 900px) {
  .c18 {
    align-items: center;
    text-align: center;
  }
}

@media (min-width: 900px) {
  .c13 {
    transform-origin: left center;
  }
}

@media (min-width: 900px) {
  .c22 {
    align-items: flex-end;
  }
}

<div>
  <footer
    class="c0"
    role="contentinfo"
  >
    <section
      class="c1"
    >
      <div
        class="c2"
      >
        <h2
          class="c3"
        >
          Let's work together.
        </h2>
        <div
          class="c4"
        >
          <a
            aria-label="LinkedIn"
            class="c5 c6"
            href="https://linkedin.com/in/agostiniandrea"
            rel="noopener noreferrer"
            target="_blank"
          >
            LinkedIn
          </a>
          <a
            aria-label="GitHub"
            class="c5 c6"
            href="https://github.com/agostiniandrea"
            rel="noopener noreferrer"
            target="_blank"
          >
            GitHub
          </a>
          <a
            aria-label="Email"
            class="c5 c6"
            href="mailto:a.agostini92@gmail.com"
          >
            Email
          </a>
        </div>
      </div>
      <div
        class="c7"
      >
        <div
          class="c8"
        >
          <div
            class="c9 c10 c11"
            data-testid="tree-nation-offset-website"
          >
            <div
              class="c12"
            >
              <div
                data-lang="en"
                data-theme="light"
                data-tree-nation-code="a4d3639b36ee64ed"
                data-widget-type="offset-website"
              />
            </div>
          </div>
          <div
            class="c13"
          >
            <span
              class="c14"
            >
              <span
                class="c15 c16"
              >
                0.05
                g of CO₂/view
              </span>
              <a
                aria-label="Website Carbon result: 0.05 grams of CO₂ per page view, tested 2026-07-12"
                class="c15 c17"
                href="https://www.websitecarbon.com/website/agostiniandrea-dev/"
                rel="noopener noreferrer"
                target="_blank"
              >
                Website Carbon
              </a>
            </span>
          </div>
        </div>
        <div
          class="c18"
        >
          <p
            class="c19 c20"
          >
            <span
              class="c21"
            >
              Building for the web, one component at a time. Based in Bangkok.
            </span>
          </p>
        </div>
        <div
          class="c22"
        >
          <p
            class="c19"
            style="color: var(--color-paragraph);"
          >
            © 
            2026
             
            Andrea Agostini
          </p>
        </div>
      </div>
    </section>
  </footer>
</div>
`;
